--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,12 @@ if (CMAKE_BUILD_TYPE MATCHES "Deb")
 endif (CMAKE_BUILD_TYPE MATCHES "Deb")
 message(STATUS "Build type is \"${CMAKE_BUILD_TYPE}\"${has_debug_symbols}")
 
-option(BUILD_WITH_CXX "Compile Proton using C++" OFF)
-if ("${CMAKE_GENERATOR}" MATCHES "^Visual Studio")
+
+if (MSVC)
   # No C99 capability, use C++
-  set(BUILD_WITH_CXX ON)
-endif ("${CMAKE_GENERATOR}" MATCHES "^Visual Studio")
+  set(DEFAULT_BUILD_WITH_CXX ON)
+endif (MSVC)
+option(BUILD_WITH_CXX "Compile Proton using C++" ${DEFAULT_BUILD_WITH_CXX})
 
 if (BUILD_WITH_CXX)
   project (Proton C CXX)
