PROTON-465: Make FindPerlLibs work properly without Perl devel files
First, fixed the build environment to only use the Proton Perl CMake
module when the standard fails.

Second, fixed the Proton CMake module to spout an info message that the
Perl bindings won't be built when the development files aren't found.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1630545 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/CMakeLists.txt
+++ b/proton-c/bindings/CMakeLists.txt
@@ -82,8 +82,7 @@ endif (PHP_CONFIG_EXE)
 mark_as_advanced (PHP_CONFIG_EXE)
 
 # Prerequisites for Perl:
-include(FindPerl)
-include(FindPerlLibs)
+include(ProtonFindPerl)
 if (PERLLIBS_FOUND)
   set (DEFAULT_PERL ON)
 endif (PERLLIBS_FOUND)
